After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 792319 - Inconsistent shortcut display in right-click menu
Inconsistent shortcut display in right-click menu
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
git master
Other Linux
: Normal minor
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-01-08 08:47 UTC by Egmont Koblinger
Modified: 2018-01-08 11:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Egmont Koblinger 2018-01-08 08:47:56 UTC
Assign a shortcut to the "Profile Preferences" action.

On the right-click menu, the shortcut of "Copy", "Copy as HTML", "Paste", "Read-Only" actions aren't shown next to these labels, however, next to "Profile Preferences" its shortcut is also displayed.

Same on Gnome Shell and Unity7.
Comment 1 Christian Persch 2018-01-08 11:07:44 UTC
It's a gtk bug (bug 789781) that accels are shown at all. I work-around this in g-t with a gross hack that traverses the menu and kills the accels (terminal-window.c:popup_menu_remove_accelerators). I've fixed it to also recurse into submenus; that fixes it here.
Comment 2 Egmont Koblinger 2018-01-08 11:15:51 UTC
Why is it a bug rather than a nice feature?
Comment 3 Christian Persch 2018-01-08 11:25:25 UTC
Well, IMHO :-) because context menus *shouldn't* have accelerators. They make the menu too wide.
Comment 4 Egmont Koblinger 2018-01-08 11:51:56 UTC
It's a matter of taste, I agree with you that narrower menus _look_ nicer, although IMHO the presence of shortcuts is more useful. I personally wouldn't bother overriding GTK+'s default. But I don't mind too much if you do.