window: Remove popup accelerators also in submenus

https://bugzilla.gnome.org/show_bug.cgi?id=792319